tests-e2e/tests/snapshots/lsp__shutdown_progress.snap
---
source: tests-e2e/tests/lsp.rs
---
{
  "kind": "end",
  "message": "Workspace preparation cancelled"
}
