tests-e2e/tests/snapshots/lsp__workspace_preparation_retry_progress.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "cancellable": true,
    "kind": "begin",
    "message": "Discovering Spago workspace",
    "percentage": 0,
    "title": "Preparing Iris workspace"
  },
  {
    "kind": "end",
    "message": "Workspace preparation cancelled"
  },
  {
    "cancellable": true,
    "kind": "begin",
    "message": "Discovering Spago workspace",
    "percentage": 0,
    "title": "Preparing Iris workspace"
  },
  {
    "kind": "end",
    "message": "Workspace preparation finished"
  }
]
