tests-e2e/tests/snapshots/lsp__workspace_request_during_buffering.snap
---
source: tests-e2e/tests/lsp.rs
---
{
  "code": -32801,
  "data": null,
  "message": "Workspace is loading"
}
