tests-e2e/tests/snapshots/lsp__workspace_request_while_preparing.snap
---
source: tests-e2e/tests/lsp.rs
---
{
  "code": -32803,
  "data": null,
  "message": "Workspace preparation cancelled"
}
