tests-e2e/tests/snapshots/lsp__workspace_symbol_after_preparation_retry.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "kind": 12,
    "location": {
      "range": {
        "end": {
          "character": 14,
          "line": 1
        },
        "start": {
          "character": 0,
          "line": 1
        }
      },
      "uri": "[WORKSPACE]/src/Library.purs"
    },
    "name": "fromBuffer"
  }
]
