tests-e2e/tests/snapshots/lsp__workspace_symbol_after_progress.snap
---
source: tests-e2e/tests/lsp.rs
---
[
  {
    "kind": 12,
    "location": {
      "range": {
        "end": {
          "character": 10,
          "line": 1
        },
        "start": {
          "character": 0,
          "line": 1
        }
      },
      "uri": "[WORKSPACE]/src/Library.purs"
    },
    "name": "value"
  }
]
